ressources/production/apps/octoprint/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: octoprint
  name: octoprint
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - secretName: print-eighty-three-me-tls
      hosts:
        - print.eighty-three.me
  rules:
  - host: print.eighty-three.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: octoprint
            port:
              number: 80
